--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div id="loading">Loading visualization...</div>
     <canvas id="canvas"></canvas>
-    <script src="js/main.js"></script>
+    <script>
+        // Show loading message
+        window.addEventListener('load', () => {
+            console.log('Page loaded');
+            const loading = document.getElementById('loading');
+            if (loading) {
+                setTimeout(() => {
+                    loading.style.display = 'none';
+                }, 1000);
+            }
+        });
+    </script>
+    <script src="js/main.js" defer></script>
 </body>
 </html> 
