--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>5D Cube Visualizer</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="loading">Loading visualization...</div>
@@ -30,6 +30,6 @@
             }
         };
     </script>
-    <script src="/js/main.js" defer></script>
+    <script src="main.js" defer></script>
 </body>
 </html>
